--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 	<title>SONIC AND THE FALLEN STAR DEMO</title>
 	<link rel="stylesheet" href="home-style.css" type="text/css" media="all">
 	<link rel="icon" type="image/gif" href="favicon.png"/>
-	</head>
+	  <meta id="mtitle" property="og:title" content="The Noob">
+  <meta property="og:site_name" content=":GWBruhTrolled:">
+  <meta property="og:url" content="https://joeweigman.neocities.org/">
+  <meta id="mdesc" property="og:description" content="Joe Weigman's Personal Website where he showcases stuff and talks about shit idk">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="Images/SiteIcon.png">
+  <meta name="theme-color" content="#ba9c76">
+  <meta charset="utf-8">
+</head>
 <body>
 <img href src="Images/S&FSLogo.png"
 		alt="Site Banner">
