--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<link rel="stylesheet" href="home-style.css" type="text/css" media="all">
 	<link rel="icon" type="image/gif" href="favicon.png"/>
 	  <meta id="mtitle" property="og:title" content="The Noob">
-  <meta property="og:site_name" content=":GWBruhTrolled:">
-  <meta property="og:url" content="https://joeweigman.neocities.org/">
-  <meta id="mdesc" property="og:description" content="Joe Weigman's Personal Website where he showcases stuff and talks about shit idk">
+  <meta property="og:site_name" content="Sonic and The Fallen Star Home">
+  <meta property="og:url" content="https://theweigman.github.io/fallen-star-website-test/">
+  <meta id="mdesc" property="og:description" content="The Official Website for Sonic and The Fallen Star Fangame">
   <meta property="og:type" content="website">
   <meta property="og:image" content="Images/SiteIcon.png">
   <meta name="theme-color" content="#ba9c76">
