--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta id="mdesc" property="og:description" content="The Official Website for Sonic and The Fallen Star Fangame">
   <meta property="og:type" content="website">
   <meta property="og:image" content="Images/SiteIcon.png">
-  <meta name="theme-color" content="#ba9c76">
+  <meta name="theme-color" content="#f991ff">
   <meta charset="utf-8">
 </head>
 <body>
