--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>SONIC AND THE FALLEN STAR DEMO</title>
-	<link rel="stylesheet" href="home-style.css" type="text/css" media="all">
+	<title>SONIC AND THE FALLEN STAR Home | Download</title>
+	<link rel="stylesheet" href="index.css" type="text/css" media="all">
 	<link rel="icon" type="image/gif" href="favicon.png"/>
-	  <meta id="mtitle" property="og:title" content="The Noob">
-  <meta property="og:site_name" content="Sonic and The Fallen Star Home">
+	  <meta id="mtitle" property="og:title" content="Sonic And The Fallen StaHome | Download">
+  <meta property="og:site_name" content="SONIC AND THE FALLEN STAR Home | Download">
   <meta property="og:url" content="https://theweigman.github.io/fallen-star-website-test/">
   <meta id="mdesc" property="og:description" content="The Official Website for Sonic and The Fallen Star Fangame">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="Images/SiteIcon.png">
   <meta name="theme-color" content="#f991ff">
   <meta charset="utf-8">
 </head>
 <body>
-<img href src="Images/S&FSLogo.png"
-		alt="Site Banner">
-		<id="top"></a>
-		</h1>
-	<h2><p>Hello Dickheads .</p></h2>
+<h1>
+	<img href src="Images/S&FSLogo.png"
+		alt="Logo">
+		<id="Logo"></a>
+</h1>
+<h2>
+	<p>Hello Dickheads .</p>
+</h2>
