--- a/index.html
+++ b/index.html
@@ -1,22 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>SONIC AND THE FALLEN STAR Home | Download</title>
+	<title>Home | Download | SONIC AND THE FALLEN STAR</title>
 	<link rel="stylesheet" href="index.css" type="text/css" media="all">
 	<link rel="icon" type="image/gif" href="favicon.png"/>
-	  <meta id="mtitle" property="og:title" content="Sonic And The Fallen StaHome | Download">
-  <meta property="og:site_name" content="SONIC AND THE FALLEN STAR Home | Download">
-  <meta property="og:url" content="https://theweigman.github.io/fallen-star-website-test/">
-  <meta id="mdesc" property="og:description" content="The Official Website for Sonic and The Fallen Star Fangame">
-  <meta name="theme-color" content="#f991ff">
-  <meta charset="utf-8">
+	  <meta id="mtitle" property="og:title" content="Sonic And The Fallen Star | Home | Download">
+	  <meta property="og:site_name" content="SONIC AND THE FALLEN STAR">
+	  <meta property="og:url" content="https://theweigman.github.io/fallen-star-website-test/">
+	  <meta id="mdesc" property="og:description" content="The Official Website for Sonic and The Fallen Star Fangame">
+	  <meta name="theme-color" content="#f991ff">
+	  <meta charset="utf-8">
+	  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
-<body>
-<h1>
-	<img href src="Images/S&FSLogo.png"
-		alt="Logo">
+<h1><a href="index.html">
+	<img href src="Images/FallenStarLogo.png"
+		width="407.5" height="303" alt="Logo">
 		<id="Logo"></a>
 </h1>
 <h2>
-	<p>Hello Dickheads .</p>
+<iframe width="650" height="405" src="https://www.youtube.com/embed/qTPQWMsFicE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<p><a href="Test.zip" style="color: white">↣ DOWNLOAD THE GAME HERE ↢</a></p>
 </h2>
+<h3>
+	<div id="OSTLogos">
+		<img class="ostlogo" src="Images/FallenStarOSTLogo.png"
+			width="196.75" hight="109" alt="OST Logo">
+				<a href="https://www.youtube.com/c/BPMParliament/playlists">
+				<img class="ytlink" src="Images/ytlink.png"
+					width="128.75" hight="128" alt="YouTube Link">
+					</a>
+				<a href="https://soundcloud.com/frogsundaevgm/sets/sonic-and-the-fallen-star">
+				<img class="sclink" src="Images/sclink.png"
+					width="174" hight="104" alt="Soundcloud Link">
+					</a>
+		</div>
+		<br>
+	<img href src="Images/Albums.png"
+		width="598.25" hight="323.75" alt="Albums">
+		<id="Logo"></img>
+</h3>
+<h2>
+	<p><br><a href="Test.zip" style="color: white">DOWNLOAD (MP3 320KBS)</a></p>
+	<p><a href="Test.zip" style="color: white">DOWNLOAD (FLAC 16-BIT)</a></p>
+	<p><a href="Test.zip" style="color: white">DOWNLOAD (FLAC 24-BIT)</a></p>
+<h2>
