bars?? spitting bars?/

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 		<p><a href="Test.zip" style="color: white">↣ DOWNLOAD THE GAME HERE ↢</a></p>
 	</h2>
 	<h3>
+		<img class="divider" src="Images/Divider.png"
+				width="827" hight="139" alt="Divider"></img>
 		<div id="OSTLogos">
 			<img class="ostlogo" src="Images/FallenStarOSTLogo.png"
 				width="196.75" hight="109" alt="OST Logo">
