--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
 	</h1>
 	<h2>
 	<iframe width="650" height="405" src="https://www.youtube.com/embed/qTPQWMsFicE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		<p><a href="Test.zip" style="color: white">↣ DOWNLOAD THE GAME HERE ↢</a></p>
+		<p><a href="Test.zip" style="color: white">• DOWNLOAD THE GAME HERE •</a></p>
+		<a href="https://twitter.com/SATFSDev">
 	</h2>
+	<h5><br><br><br>
+		<img href src="Images/twtlink.png"
+			width="78" height="63" alt="Twitter">
+			<id="Twitter"></a>
+		<p>AND FOLLOW US ON TWITTER !!!</p>
+	</h5>
 	<h3>
 		<img class="divider" src="Images/Divider.png"
 				width="827" hight="139" alt="Divider"></img>
@@ -30,12 +37,10 @@
 				width="196.75" hight="109" alt="OST Logo">
 					<a href="https://www.youtube.com/c/BPMParliament/playlists">
 					<img class="ytlink" src="Images/ytlink.png"
-						width="128.75" hight="128" alt="YouTube Link">
-						</a>
+						width="128.75" hight="128" alt="YouTube Link"></a>
 					<a href="https://soundcloud.com/frogsundaevgm/sets/sonic-and-the-fallen-star">
 					<img class="sclink" src="Images/sclink.png"
-						width="174" hight="104" alt="Soundcloud Link">
-						</a>
+						width="174" hight="104" alt="Soundcloud Link"></a>
 			</div>
 			<br>
 		<img href src="Images/Albums.png"
@@ -48,3 +53,8 @@
 		<p><a href="Test.zip" style="color: white">DOWNLOAD (FLAC 24-BIT)</a></p>
 	</h4>
 </div>
+<h5><br>
+	<img class="divider" src="Images/SonicIdle.gif"
+		width="93" hight="120" alt="SonicWait"></img>
+	<p>GAME DEVELOPED BY <a href="https://twitter.com/JustStarDrop" style="color: white">STARDROP</a><br>MUSIC COMPOSED BY <a href="https://twitter.com/FrogSundae" style="color: white">HOLLIE TAYLOR</a><br>WEBSITE DESIGNED BY <a href="https://twitter.com/the_weigman" style="color: white">JOE WEIGMAN</a></p>
+</h5>
