--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	  <meta id="mtitle" property="og:title" content="Sonic And The Fallen Star | Home - Download">
 	  <meta property="og:site_name" content="SONIC AND THE FALLEN STAR">
 	  <meta property="og:url" content="https://theweigman.github.io/fallen-star-website-test/">
-	  <meta id="mdesc" property="og:description" content="The Official Website for the Sonic and The Fallen Star Fangame">
+	  <meta id="mdesc" property="og:description" content="The official website for the Sonic and The Fallen Star Fangame">
 	  <meta name="theme-color" content="#f991ff">
 	  <meta charset="utf-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1" />
