--- a/index.html
+++ b/index.html
@@ -56,5 +56,5 @@
 <h5><br>
 	<img class="divider" src="Images/SonicIdle.gif"
 		width="93" hight="120" alt="SonicWait"></img>
-	<p>GAME DEVELOPED BY <a href="https://twitter.com/JustStarDrop" style="color: white">STARDROP</a><br>MUSIC COMPOSED BY <a href="https://twitter.com/FrogSundae" style="color: white">HOLLIE TAYLOR</a><br>WEBSITE DESIGNED BY <a href="https://twitter.com/the_weigman" style="color: white">JOE WEIGMAN</a></p>
+	<p>GAME DEVELOPED BY <a href="https://twitter.com/JustStarDrop" style="color: white">STARDROP</a><br>MUSIC COMPOSED BY <a href="https://twitter.com/FrogSundae" style="color: white">HOLLIE TAYLOR</a><br>TRAILER MADE BY <a href="https://twitter.com/usagidood" style="color: white">USAGIDOOD</a><br>WEBSITE DESIGNED BY <a href="https://twitter.com/the_weigman" style="color: white">JOE WEIGMAN</a></p>
 </h5>
