--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home | Download | SONIC AND THE FALLEN STAR</title>
+	<title>Home - Download | SONIC AND THE FALLEN STAR</title>
 	<link rel="stylesheet" href="index.css" type="text/css" media="all">
 	<link rel="icon" type="image/gif" href="favicon.png"/>
 	  <meta id="mtitle" property="og:title" content="Sonic And The Fallen Star | Home - Download">
 	  <meta property="og:site_name" content="SONIC AND THE FALLEN STAR">
 	  <meta property="og:url" content="https://theweigman.github.io/fallen-star-website-test/">
-	  <meta id="mdesc" property="og:description" content="The official website for the Sonic and The Fallen Star Fangame">
+	  <meta id="mdesc" property="og:description" content="The Official Website for the Sonic and The Fallen Star Fangame">
 	  <meta name="theme-color" content="#f991ff">
 	  <meta charset="utf-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -31,7 +31,7 @@
 	</h5>
 	<h3>
 		<img class="divider" src="Images/Divider.png"
-				width="827" hight="139" alt="Divider"></img>
+				width="620" hight="104" alt="Divider"></img>
 		<div id="OSTLogos">
 			<img class="ostlogo" src="Images/FallenStarOSTLogo.png"
 				width="196.75" hight="109" alt="OST Logo">
@@ -56,5 +56,8 @@
 <h5><br>
 	<img class="divider" src="Images/SonicIdle.gif"
 		width="93" hight="120" alt="SonicWait"></img>
-	<p>GAME DEVELOPED BY <a href="https://twitter.com/JustStarDrop" style="color: white">STARDROP</a><br>MUSIC COMPOSED BY <a href="https://twitter.com/FrogSundae" style="color: white">HOLLIE TAYLOR</a><br>TRAILER MADE BY <a href="https://twitter.com/usagidood" style="color: white">USAGIDOOD</a><br>WEBSITE DESIGNED BY <a href="https://twitter.com/the_weigman" style="color: white">JOE WEIGMAN</a></p>
+	<p>GAME DEVELOPED BY <a href="https://twitter.com/JustStarDrop" style="color: white">STARDROP</a>
+	<br>MUSIC COMPOSED BY <a href="https://twitter.com/FrogSundae" style="color: white">HOLLIE TAYLOR</a>
+	<br>TRAILER MADE BY <a href="https://twitter.com/usagidood" style="color: white">USAGIDOOD</a>
+	<br>WEBSITE DESIGNED BY <a href="https://twitter.com/the_weigman" style="color: white">JOE WEIGMAN</a></p>
 </h5>
