--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Home - Download | SONIC AND THE FALLEN STAR</title>
-	<link rel="stylesheet" href="index.css" type="text/css" media="all"/>
+	<link rel="stylesheet" href="index.css" type="text/css" media="all">
+	<link rel="icon" type="image/gif" href="favicon.png"/>
 	  <meta id="mtitle" property="og:title" content="Sonic And The Fallen Star | Home - Download">
 	  <meta property="og:site_name" content="SONIC AND THE FALLEN STAR">
 	  <meta property="og:url" content="https://theweigman.github.io/fallen-star-website-test/">
