please work now;

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Home - Download | SONIC AND THE FALLEN STAR</title>
 	<link rel="stylesheet" href="index.css" type="text/css" media="all">
-	<link rel="icon" type="image/gif" href="favicon.png"/>
+	<link rel="icon" type="image/gif" href="favicon2.png"/>
 	  <meta id="mtitle" property="og:title" content="Sonic And The Fallen Star | Home - Download">
 	  <meta property="og:site_name" content="SONIC AND THE FALLEN STAR">
 	  <meta property="og:url" content="https://theweigman.github.io/fallen-star-website-test/">
