--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<link rel="icon" type="image/gif" href="favicon2.png"/>
 	  <meta id="mtitle" property="og:title" content="Sonic And The Fallen Star | Home - Download">
 	  <meta property="og:site_name" content="SONIC AND THE FALLEN STAR">
-	  <meta property="og:url" content="https://theweigman.github.io/fallen-star-website-test/">
+	  <meta property="og:url" content="https://stardropsmh.github.io/sonic-and-the-fallen-star/">
+	  <meta property="og:image" content="https://raw.githubusercontent.com/StarDropSmh/sonic-and-the-fallen-star/main/favicon2.png">
 	  <meta id="mdesc" property="og:description" content="The Official Website for the Sonic and The Fallen Star Fangame">
 	  <meta name="theme-color" content="#f991ff">
 	  <meta charset="utf-8">
