--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 <div class="wrapper">
 	<h1><a href="index.html">
 		<img href src="Images/FallenStarLogo.png"
-			width="407.5" height="303" alt="Logo">
+			width="407.5" height="303" alt="Fallen Star Logo" title="Sonic And The Fallen Star | Home - Download">
 			<id="Logo"></a>
 	</h1>
 	<h2>
 	<iframe width="650" height="405" src="https://www.youtube.com/embed/qTPQWMsFicE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		<p><a href="Test.zip" style="color: white">• DOWNLOAD THE GAME HERE •</a></p>
-		<a href="https://twitter.com/SATFSDev">
 	</h2>
 	<h5><br><br><br>
+		<a href="https://twitter.com/SATFSDev" style="color: white">
 		<img href src="Images/twtlink.png"
-			width="78" height="63" alt="Twitter">
-			<id="Twitter"></a>
-		<p>AND FOLLOW US ON TWITTER !!!</p>
+			width="78" height="63" alt="Twitter Logo" title="Follow Sonic and the Fallen Star on Twitter">
+			<id="Twitter">
+		<p>AND FOLLOW US ON TWITTER !!!</p></a>
 	</h5>
 	<h3>
 		<img class="divider" src="Images/Divider.png"
@@ -38,14 +38,14 @@
 				width="196.75" hight="109" alt="OST Logo">
 					<a href="https://www.youtube.com/c/BPMParliament/playlists">
 					<img class="ytlink" src="Images/ytlink.png"
-						width="128.75" hight="128" alt="YouTube Link"></a>
+						width="128.75" hight="128" alt="YouTube Link" title="Listen to the OST on YouTube"></a>
 					<a href="https://soundcloud.com/frogsundaevgm/sets/sonic-and-the-fallen-star">
 					<img class="sclink" src="Images/sclink.png"
-						width="174" hight="104" alt="Soundcloud Link"></a>
+						width="174" hight="104" alt="Soundcloud Link" title="Listen to the OST on Soundcloud"></a>
 			</div>
 			<br>
 		<img href src="Images/Albums.png"
-			width="598.25" hight="323.75" alt="Albums">
+			width="598.25" hight="323.75" alt="Album Releases">
 			<id="Logo"></img>
 	</h3>
 	<h4>
@@ -56,7 +56,7 @@
 </div>
 <h5><br>
 	<img class="divider" src="Images/SonicIdle.gif"
-		width="93" hight="120" alt="SonicWait"></img>
+		width="93" hight="120" alt="Sonic Waiting" title="hey dickhead"></img>
 	<p>GAME DEVELOPED BY <a href="https://twitter.com/JustStarDrop" style="color: white">STARDROP</a>
 	<br>MUSIC COMPOSED BY <a href="https://twitter.com/FrogSundae" style="color: white">HOLLIE TAYLOR</a>
 	<br>TRAILER MADE BY <a href="https://twitter.com/usagidood" style="color: white">USAGIDOOD</a>
