--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 		<div id="OSTLogos">
 			<img class="ostlogo" src="Images/FallenStarOSTLogo.png"
 				width="196.75" hight="109" alt="OST Logo">
-					<a href="https://www.youtube.com/c/BPMParliament/playlists">
+					<a href="https://www.youtube.com/playlist?list=PL8if3My-NSVfZPO1HlhmvGYMVrwvDfpWY">
 					<img class="ytlink" src="Images/ytlink.png"
 						width="128.75" hight="128" alt="YouTube Link" title="Listen to the OST on YouTube"></a>
-					<a href="https://soundcloud.com/frogsundaevgm/sets/sonic-and-the-fallen-star">
+					<a href="https://soundcloud.com/frogsundaevgm/sets/sonic-and-the-fallen-star-original-soundtrack">
 					<img class="sclink" src="Images/sclink.png"
 						width="174" hight="104" alt="Soundcloud Link" title="Listen to the OST on Soundcloud"></a>
 			</div>
