--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 			<id="Logo"></img>
 	</h3>
 	<h4>
-		<p><a href="Test.zip" style="color: white">DOWNLOAD (MP3 320KBS)</a></p>
-		<p><a href="Test.zip" style="color: white">DOWNLOAD (FLAC 16-BIT)</a></p>
+		<p><a href="https://drive.google.com/drive/folders/1ByXzo0Sz1an9hjzrPtXN6E3dadm0m8kv?usp=sharing" style="color: white">DOWNLOAD (MP3 320KBS)</a></p>
+		<p><a href="https://drive.google.com/drive/folders/1x10oS8MvgBIQuadHysvAbA1I6TCmhQrt?usp=sharing" style="color: white">DOWNLOAD (FLAC 16-BIT)</a></p>
 	</h4>
 </div>
 <h5><br>
