--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 	  <meta property="og:image" content="https://raw.githubusercontent.com/StarDropSmh/sonic-and-the-fallen-star/main/favicon2.png">
 	  <meta id="mdesc" property="og:description" content="The Official Website for the Sonic and The Fallen Star Fangame">
 	  <meta name="theme-color" content="#f991ff">
-	  <meta name="twitter:title"content="Sonic And The Fallen Star | Home - Download" />
-	  <meta name="twitter:description" content="The Official Website for the Sonic and The Fallen Star Fangame" />
-	  <meta name="twitter:image" content="https://raw.githubusercontent.com/StarDropSmh/sonic-and-the-fallen-star/main/favicon2.png" />
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:creator" content="@SATFSDev">
+<meta name="twitter:title" content="Sonic And The Fallen Star | Home - Download">
+<meta name="twitter:description" content="The Official Website for the Sonic and The Fallen Star Fangame">
+<meta name="twitter:image" content="https://raw.githubusercontent.com/StarDropSmh/sonic-and-the-fallen-star/main/favicon2.png">
 	  <meta charset="utf-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
