when the twitter card is gay

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	  <meta name="twitter:image" content="https://raw.githubusercontent.com/StarDropSmh/sonic-and-the-fallen-star/main/favicon2.png">
 	  <meta charset="utf-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1" />
+	  <meta name="google-site-verification" content="lEpBNUXSciNWWew1jXePiE1TEu3_acJdyny_8OIcdnI" />
 </head>
 <div class="wrapper">
 	<h1><a href="index.html">
