the final fall (here we go)

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 			<id="Logo"></a>
 	</h1>
 	<h2>
-	<iframe width="650" height="405" src="https://www.youtube.com/embed/qTPQWMsFicE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		<p><a href="Test.zip" style="color: white">• DOWNLOAD THE GAME HERE •</a></p>
+	<iframe width="650" height="405" src="https://www.youtube.com/embed/fh4fCn5FM4I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<p><a href="https://drive.google.com/file/d/1Aq2d26si-lviLoOBWgNWzvD_hOWnTd9t/view?usp=sharing" target="blank" rel="noopener noreferrer" style="color: white">• DOWNLOAD THE GAME HERE •</a></p>
 	</h2>
 	<h5><br><br><br>
 		<a href="https://twitter.com/SATFSDev" style="color: white">
@@ -42,10 +42,10 @@
 		<div id="OSTLogos">
 			<img class="ostlogo" src="Images/FallenStarOSTLogo.png"
 				width="196.75" hight="109" alt="OST Logo">
-					<a href="https://www.youtube.com/playlist?list=PL8if3My-NSVfZPO1HlhmvGYMVrwvDfpWY">
+					<a href="https://www.youtube.com/playlist?list=PL8if3My-NSVfZPO1HlhmvGYMVrwvDfpWY" target="blank" rel="noopener noreferrer">
 					<img class="ytlink" src="Images/ytlink.png"
 						width="128.75" hight="128" alt="YouTube Link" title="Listen to the OST on YouTube"></a>
-					<a href="https://soundcloud.com/frogsundaevgm/sets/sonic-and-the-fallen-star-original-soundtrack">
+					<a href="https://soundcloud.com/frogsundaevgm/sets/sonic-and-the-fallen-star-original-soundtrack" target="blank" rel="noopener noreferrer">
 					<img class="sclink" src="Images/sclink.png"
 						width="174" hight="104" alt="Soundcloud Link" title="Listen to the OST on Soundcloud"></a>
 			</div>
@@ -61,7 +61,7 @@
 </div>
 <h5><br>
 	<img class="divider" src="Images/SonicIdle.gif"
-		width="93" hight="120" alt="Sonic Waiting" title="hey dickhead"></img>
+		width="93" hight="120" alt="Sonic Waiting" title="if you like hovering so much, why don't you hover over a job application?"></img>
 	<p>GAME DEVELOPED BY <a href="https://twitter.com/JustStarDrop" style="color: white">STARDROP</a>
 	<br>MUSIC COMPOSED BY <a href="https://twitter.com/FrogSundae" style="color: white">HOLLIE TAYLOR</a>
 	<br>TRAILER MADE BY <a href="https://twitter.com/usagidood" style="color: white">USAGIDOOD</a>
