--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 			width="407.5" height="303" alt="Fallen Star Logo" title="Sonic And The Fallen Star | Home - Download">
 			<id="Logo"></a>
 	</h1>
-	<h2>
-	<iframe width="650" height="405" src="https://www.youtube.com/embed/oAsY4VEsmMk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<h2><iframe width="650" height="405" src="https://www.youtube.com/embed/oAsY4VEsmMk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		<p><a href="https://drive.google.com/file/d/1Aq2d26si-lviLoOBWgNWzvD_hOWnTd9t/view?usp=sharing" target="blank" rel="noopener noreferrer" style="color: white">• DOWNLOAD THE GAME HERE •</a></p>
 	</h2>
 	<h5><br><br><br>
