big things are coming :scream:

--- a/index.html
+++ b/index.html
@@ -25,11 +25,16 @@
 			width="407.5" height="303" alt="Fallen Star Logo" title="Sonic And The Fallen Star | Home - Download">
 			<id="Logo"></a>
 	</h1>
-	<h2><iframe width="650" height="405" src="https://www.youtube.com/embed/oAsY4VEsmMk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		<p><a href="https://drive.google.com/drive/folders/1u30dPKs5S3bsg1-OzJ6Kcek15Ltjzocp?usp=sharing" target="blank" rel="noopener noreferrer" style="color: white">• DOWNLOAD THE GAME HERE •</a></p>
+	<h2>
+	<iframe width="650" height="405" src="https://www.youtube.com/embed/oAsY4VEsmMk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</h2>
-	<h5><br><br><br>
-		<a href="https://twitter.com/SATFSDev" style="color: white">
+	<h2>
+	<br><br><br><br><br><br>
+		<p><a href="https://drive.google.com/drive/folders/1u30dPKs5S3bsg1-OzJ6Kcek15Ltjzocp?usp=sharing" target="blank" rel="noopener noreferrer">• DOWNLOAD THE GAME HERE •</a></p>
+	</h2>
+	<h5>
+		<br><br><br><br><br><br>
+		<a href="https://twitter.com/SATFSDev">
 		<img href src="Images/twtlink.png"
 			width="78" height="63" alt="Twitter Logo" title="Follow Sonic and the Fallen Star on Twitter">
 			<id="Twitter">
@@ -54,15 +59,15 @@
 			<id="Logo"></img>
 	</h3>
 	<h4>
-		<p><a href="https://drive.google.com/drive/folders/1ByXzo0Sz1an9hjzrPtXN6E3dadm0m8kv?usp=sharing" style="color: white">DOWNLOAD (MP3 320KBS)</a></p>
-		<p><a href="https://drive.google.com/drive/folders/1x10oS8MvgBIQuadHysvAbA1I6TCmhQrt?usp=sharing" style="color: white">DOWNLOAD (FLAC 16-BIT)</a></p>
+		<p><a href="https://drive.google.com/drive/folders/1ByXzo0Sz1an9hjzrPtXN6E3dadm0m8kv?usp=sharing">DOWNLOAD (MP3 320KBS)</a></p>
+		<p><a href="https://drive.google.com/drive/folders/1x10oS8MvgBIQuadHysvAbA1I6TCmhQrt?usp=sharing">DOWNLOAD (FLAC 16-BIT)</a></p>
 	</h4>
 </div>
-<h5><br>
+<h5><br><br><br>
 	<img class="divider" src="Images/SonicIdle.gif"
 		width="93" hight="120" alt="Sonic Waiting" title="if you like hovering so much, why don't you hover over a job application?"></img>
-	<p>GAME DEVELOPED BY <a href="https://twitter.com/JustStarDrop" style="color: white">STARDROP</a>
-	<br>MUSIC COMPOSED BY <a href="https://twitter.com/FrogSundae" style="color: white">HOLLIE TAYLOR</a>
-	<br>TRAILER MADE BY <a href="https://twitter.com/usagidood" style="color: white">USAGIDOOD</a>
-	<br>WEBSITE DESIGNED BY <a href="https://twitter.com/the_weigman" style="color: white">JOE WEIGMAN</a></p>
+	<p>GAME DEVELOPED BY <a href="https://twitter.com/JustStarDrop">STARDROP</a>
+	<br>MUSIC COMPOSED BY <a href="https://twitter.com/FrogSundae">HOLLIE TAYLOR</a>
+	<br>TRAILER MADE BY <a href="https://twitter.com/usagidood">USAGIDOOD</a>
+	<br>WEBSITE DESIGNED BY <a href="https://twitter.com/the_weigman">JOE WEIGMAN</a></p>
 </h5>
