--- a/index.html
+++ b/index.html
@@ -27,10 +27,30 @@
 	</h1>
 	<h2>
 	<iframe width="650" height="405" src="https://www.youtube.com/embed/oAsY4VEsmMk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</h2>
-	<h2>
+<h4>
+        <img class="divider" src="Images/Divider.png"
+                width="570" hight="54" alt="Divider"></img>
+        <p>WE ARE AT <a href="https://sagexpo.org/" target="blank" rel="noopener noreferrer">SAGE</a> THIS YEAR!</p>
+            <a href="https://sagexpo.org/" target="blank" rel="noopener noreferrer">
+            <img class="SAGE" src="Images/SAGE22MONOAM2U2ED.png"
+                        width="200" alt="SAGE"></a>
+    </h4>
+    <h5>
+    <br><br><br>
+        <p><a href="https://sonicfangameshq.com/forums/showcase/sonic-and-the-fallen-star.1399/" target="blank" rel="noopener noreferrer">• CHECK OUT OUR BOOTH HERE •</a></p>
+    </h5>
+    <h3>
+        <img class="divider" src="Images/Divider.png"
+                width="570" hight="54" alt="Divider"></img>
+    </h3>    
+    <h2>
+        <br><br>
+        <img href src="Images/FallenStarThankYou.png"
+            width="600"alt="Thank You!">
+            <id="Thank"></img>
+        <p><a href="https://drive.google.com/file/d/1_3qM8O3UyZBnOHr02RtWgKqauIGODz__/view?usp=sharing" target="blank" rel="noopener noreferrer">• DOWNLOAD THE GAME HERE •</a></p>
+    </h2>
 	<br><br><br><br><br><br>
-		<p><a href="https://drive.google.com/drive/folders/1u30dPKs5S3bsg1-OzJ6Kcek15Ltjzocp?usp=sharing" target="blank" rel="noopener noreferrer">• DOWNLOAD THE GAME HERE •</a></p>
 	</h2>
 	<h5>
 		<br><br><br><br><br><br>
@@ -68,6 +88,7 @@
 		width="93" hight="120" alt="Sonic Waiting" title="if you like hovering so much, why don't you hover over a job application?"></img>
 	<p>GAME DEVELOPED BY <a href="https://twitter.com/JustStarDrop">STARDROP</a>
 	<br>MUSIC COMPOSED BY <a href="https://twitter.com/FrogSundae">HOLLIE TAYLOR</a>
+    <br>ALTERNATE OST BY <a href="https://twitter.com/Hi_im_on_twitr">HI</a>
 	<br>TRAILER MADE BY <a href="https://twitter.com/usagidood">USAGIDOOD</a>
 	<br>WEBSITE DESIGNED BY <a href="https://twitter.com/the_weigman">JOE WEIGMAN</a></p>
 </h5>
