--- a/index.html
+++ b/index.html
@@ -26,40 +26,32 @@
 			<id="Logo"></a>
 	</h1>
 	<h2>
-	<iframe width="650" height="405" src="https://www.youtube.com/embed/oAsY4VEsmMk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<h4>
-        <img class="divider" src="Images/Divider.png"
-                width="570" hight="54" alt="Divider"></img>
-        <p>WE ARE AT <a href="https://sagexpo.org/" target="blank" rel="noopener noreferrer">SAGE</a> THIS YEAR!</p>
-            <a href="https://sagexpo.org/" target="blank" rel="noopener noreferrer">
-            <img class="SAGE" src="Images/SAGE22MONOAM2U2ED.png"
-                        width="200" alt="SAGE"></a>
-    </h4>
-    <h5>
-    <br><br><br>
-        <p><a href="https://sonicfangameshq.com/forums/showcase/sonic-and-the-fallen-star.1399/" target="blank" rel="noopener noreferrer">• CHECK OUT OUR BOOTH HERE •</a></p>
-    </h5>
-    <h3>
-        <img class="divider" src="Images/Divider.png"
-                width="570" hight="54" alt="Divider"></img>
-    </h3>    
-    <h2>
-        <br><br>
-        <img href src="Images/FallenStarThankYou.png"
-            width="600"alt="Thank You!">
-            <id="Thank"></img>
-        <p><a href="https://drive.google.com/file/d/1_3qM8O3UyZBnOHr02RtWgKqauIGODz__/view?usp=sharing" target="blank" rel="noopener noreferrer">• DOWNLOAD THE GAME HERE •</a></p>
-    </h2>
-	<br><br><br><br><br><br>
+		<iframe width="650" height="405" src="https://www.youtube.com/embed/oAsY4VEsmMk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<br>
+		<p><a href="https://drive.google.com/file/d/1_3qM8O3UyZBnOHr02RtWgKqauIGODz__/view?usp=sharing" target="blank" rel="noopener noreferrer">• DOWNLOAD THE GAME HERE •</a></p>
 	</h2>
 	<h5>
 		<br><br><br><br><br><br>
 		<a href="https://twitter.com/SATFSDev">
 		<img href src="Images/twtlink.png"
 			width="78" height="63" alt="Twitter Logo" title="Follow Sonic and the Fallen Star on Twitter">
-			<id="Twitter">
-		<p>AND FOLLOW US ON TWITTER !!!</p></a>
+			<id="Twitter"><p>AND FOLLOW US ON TWITTER !!!</p></a>
+		<br>
+		<img href src="Images/FallenStarThankYou.png"
+            width="600"alt="Thank You!">
+            <id="Thank"></img>
+		<img class="divider" src="Images/Divider.png"
+                width="570" hight="54" alt="Divider"></img>
 	</h5>
+	<h4>
+        <p>WE WERE AT <a href="https://sagexpo.org/" target="blank" rel="noopener noreferrer">SAGE 2022!</p>
+            <img class="SAGE" src="Images/SAGE22MONOAM2U2ED.png"
+			width="200" alt="SAGE"></a></img>
+    </h4>
+    <h5>
+		<br><br><br>
+        <a href="https://sonicfangameshq.com/forums/showcase/sonic-and-the-fallen-star.1399/" target="blank" rel="noopener noreferrer"><p>• SEE OUR BOOTH HERE •</p></a>
+    </h5>
 	<h3>
 		<img class="divider" src="Images/Divider.png"
 				width="570" hight="54" alt="Divider"></img>
@@ -86,9 +78,10 @@
 <h5><br><br><br>
 	<img class="divider" src="Images/SonicIdle.gif"
 		width="93" hight="120" alt="Sonic Waiting" title="if you like hovering so much, why don't you hover over a job application?"></img>
-	<p>GAME DEVELOPED BY <a href="https://twitter.com/JustStarDrop">STARDROP</a>
-	<br>MUSIC COMPOSED BY <a href="https://twitter.com/FrogSundae">HOLLIE TAYLOR</a>
-    <br>ALTERNATE OST BY <a href="https://twitter.com/Hi_im_on_twitr">HI</a>
-	<br>TRAILER MADE BY <a href="https://twitter.com/usagidood">USAGIDOOD</a>
-	<br>WEBSITE DESIGNED BY <a href="https://twitter.com/the_weigman">JOE WEIGMAN</a></p>
+	<p>GAME DEVELOPED BY <a href="https://twitter.com/JustStarDrop"><u>STARDROP</u></a>
+	<br>MUSIC COMPOSED BY <a href="https://twitter.com/FrogSundae"><u>HOLLIE TAYLOR</u></a>
+    <br>ALTERNATE OST BY <a href="https://twitter.com/Hi_im_on_twitr"><u>HI</u></a>
+	<br>TRAILER MADE BY <a href="https://twitter.com/usagidood"><u>USAGIDOOD</u></a>
+	<br>WEBSITE DESIGNED BY <a href="https://twitter.com/the_weigman"><u>JOE WEIGMAN</u></a></p>
 </h5>
+</html>
