--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	<img class="divider" src="Images/SonicIdle.gif"
 		width="93" hight="120" alt="Sonic Waiting" title="if you like hovering so much, why don't you hover over a job application?"></img>
 	<p>GAME DEVELOPED BY <a href="https://twitter.com/JustStarDrop"><u>STARDROP</u></a>
-	<br>MUSIC COMPOSED BY <a href="https://twitter.com/FrogSundae"><u>HOLLIE TAYLOR</u></a>
+	<br>MUSIC COMPOSED BY <a href="https://twitter.com/haha_hollie"><u>HOLLIE TAYLOR</u></a>
     <br>ALTERNATE OST BY <a href="https://twitter.com/Hi_im_on_twitr"><u>HI</u></a>
 	<br>TRAILER MADE BY <a href="https://twitter.com/usagidood"><u>USAGIDOOD</u></a>
 	<br>WEBSITE DESIGNED BY <a href="https://twitter.com/the_weigman"><u>JOE WEIGMAN</u></a></p>
