the silly streamer :nail_care:

--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
 	<img class="logo" href src="Images/FallenStarLogo.png"
 			width="200" alt="Fallen Star Logo"></a>
 	<img class="sonicidle" src="Images/SonicIdle.gif"
-		width="93" hight="120"></img>
+		width="93" hight="120" alt="Sonic Waiting" title="you did it!"></img>
 	<h1>
 		<p>HMM...<br>THIS PAGE DOES NOT EXIST.</p>
 	</h1>
