--- a/index.html
+++ b/index.html
@@ -36,22 +36,21 @@
 		<img href src="Images/twtlink.png"
 			width="78" height="63" alt="Twitter Logo" title="Follow Sonic and the Fallen Star on Twitter">
 			<id="Twitter"><p>AND FOLLOW US ON TWITTER !!!</p></a>
-		<br>
+		
 		<img href src="Images/FallenStarThankYou.png"
             width="600"alt="Thank You!">
             <id="Thank"></img>
+		<br>
+        <a href="https://sonicfangameshq.com/forums/showcase/sonic-and-the-fallen-star.1399/"><p>CHECK OUT OUR SAGE 2022 BOOTH HERE</p></a>
 		<img class="divider" src="Images/Divider.png"
                 width="570" hight="54" alt="Divider"></img>
-	</h5>
-	<h4>
-        <p>WE WERE AT <a href="https://sagexpo.org/" target="blank" rel="noopener noreferrer">SAGE 2022!</p>
-            <img class="SAGE" src="Images/SAGE22MONOAM2U2ED.png"
-			width="200" alt="SAGE"></a></img>
-    </h4>
-    <h5>
-		<br><br><br>
-        <a href="https://sonicfangameshq.com/forums/showcase/sonic-and-the-fallen-star.1399/" target="blank" rel="noopener noreferrer"><p>• SEE OUR BOOTH HERE •</p></a>
     </h5>
+	<h4>
+        <p>THE FALLEN STAR OST IS OUT ON<br><br>STREAMING SERVICES!</p>
+		<p class="streaming">NOW ON SPOTIFY, ITUNES, BANDCAMP AND MORE</p>
+		<iframe src="https://open.spotify.com/embed/album/0ABLzN9lzgGf7xFeCm2GjT?utm_source=generator" width="65%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+		<iframe class="bandcamp" style="border: 0; width: 65%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3980263841/size=large/bgcol=ffffff/linkcol=7137dc/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://hahahollie.bandcamp.com/album/fallen-star">Fallen Star by Hollie Taylor</a></iframe>
+    </h4>
 	<h3>
 		<img class="divider" src="Images/Divider.png"
 				width="570" hight="54" alt="Divider"></img>
